# node-alsa-capture

./: .gitignore  AlsaOptions.d.ts  AlsaOptions.js  AlsaOptions.js.map  CMakeLists.txt  index.d.ts  index.js  index.js.map  package-lock.json  package.json
ts/: AlsaOptions.ts  index.ts
